--- a/hardhat/.gitignore
+++ b/hardhat/.gitignore
@@ -16,3 +16,4 @@ pnpm-lock.yaml
 
 # Hardhat Ignition default folder for deployments against a local node
 ignition/deployments/chain-31337
+ignition/deployments/chain-314159
