--- a/filframe_ai/src/filframe_ai/config/tasks.yaml
+++ b/filframe_ai/src/filframe_ai/config/tasks.yaml
@@ -1,8 +1,6 @@
 research_task:
   description: >
     Conduct a thorough research about {topic}
-    Make sure you find any interesting and relevant information given
-    the current year is {current_year}.
   expected_output: >
     A list with 10 bullet points of the most relevant information about {topic}
   agent: researcher
@@ -12,6 +10,6 @@ reporting_task:
     Review the context you got and expand each topic into a full section for a report.
     Make sure the report is detailed and contains any and all relevant information.
   expected_output: >
-    A fully fledged report with the main topics, each with a full section of information.
+    Return true or false if {topic} is useful
     Formatted as markdown without '```'
   agent: reporting_analyst
