--- a/reactjs/package.json
+++ b/reactjs/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
     "ethers": "^6.13.5",
+    "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.5",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
